Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.va\""
+    "email = \"art.vadelay@vandelay\""
    ]
   },
   {
