--- a/index.ipynb
+++ b/index.ipynb
@@ -116,11 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vadelay@vandelay\""
+    "email = \"art.vadelay@vandelay.co\""
    ]
   },
   {
