--- a/index.ipynb
+++ b/index.ipynb
@@ -139,12 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "website = \"vandelay.com\"\n",
-    "website = \"vandelay.co\""
+    "website = \"vandelay.com\""
    ]
   },
   {
