Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,12 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "website = \"vandelay.com\"\n",
-    "website = \"vandelay.com\""
+    "website = \"vandelay.co\""
    ]
   },
   {
