--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.va\""
+    "email = \"art.vandelay\""
    ]
   },
   {
