Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vadelay@vandelay\""
+    "email = \"art.vadelay@vandelay.com\""
    ]
   },
   {
