--- a/index.ipynb
+++ b/index.ipynb
@@ -201,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vadelay@vandelay.com\""
+    "email = \"art.vadelay@vandelay.co\""
    ]
   },
   {
