Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -411,22 +411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'art.vadelay@vandelay.co'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "email = 'liz@'# 'liz@ka-plan.com'"
+    "email = 'liz@ka-plan.com'# 'liz@ka-plan.com'"
    ]
   },
   {
