Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -586,14 +586,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'Liz Kaplan'\n",
-    "name = "
+    "name = 42"
    ]
   },
   {
